Fix mobile overflow, back filter, default filter, add search button

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,7 @@
 body {
   background-color: #FBFAFE;
   color: #15131F;
+  overflow-x: hidden;
 }
 
 @keyframes fade {
